--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
 
 html {
   font-size: 62.5%;
@@ -46,23 +47,24 @@ html {
   padding: 0 11.2rem;
   background-color: #003882;
   display: flex;
-
+  border-bottom: solid 2px #fff;
 }
 
-.secondary-nav-link{
-    display: flex;
-    gap: 0.6rem;
-    align-items: center;
+.secondary-nav-link {
+  display: flex;
+  gap: 0.6rem;
+  align-items: center;
 }
 
-.secondary-nav-link img{
-    display: inline;
-    height: 1rem;
-    width: 1rem;
-    filter: invert(100%) sepia(0%) saturate(25%) hue-rotate(70deg) brightness(108%) contrast(108%);
+.secondary-nav-link img {
+  display: inline;
+  height: 1rem;
+  width: 1rem;
+  filter: invert(100%) sepia(0%) saturate(25%) hue-rotate(70deg)
+    brightness(108%) contrast(108%);
 }
 
-.secondary-nav-link:hover .dropdown-icon{
+.secondary-nav-link:hover .dropdown-icon {
   transform: rotate(180deg);
 }
 
@@ -83,3 +85,59 @@ html {
   background-color: #4776aa;
 }
 
+.section-hero {
+  position: relative;
+}
+
+.hero-overlay {
+  max-width: 70rem;
+  background-color: #ffcc33;
+  padding: 4.2rem 6rem;
+
+  background-image: url(/img/Homepage/alumni-hero-bg.png);
+  background-repeat: no-repeat;
+
+  transform: translate(-50%, -50%);
+
+  position: absolute;
+  top: 90%;
+  left: 30%;
+}
+
+.hero-overlay h1 {
+  font-size: 2.4rem;
+  color: #363230;
+  font-family: 'Merriweather', serif;
+  padding-bottom: 1.6rem;
+}
+
+.hero-overlay p {
+  font-size: 1.6rem;
+  color: #363230;
+}
+
+.learn-more-hero-icon {
+  height: 3.2rem;
+  filter: invert(16%) sepia(9%) saturate(453%) hue-rotate(335deg)
+    brightness(96%) contrast(87%);
+}
+
+.learn-more-hero:link,
+.learn-more-hero:visited {
+  color: #363230;
+  font-size: 1.8rem;
+  letter-spacing: 1.5px;
+  font-weight: 500;
+
+  display: inline-flex;
+  flex-shrink: 1;
+  align-items: center;
+  gap: 1.6rem;
+  text-decoration: none;
+  padding-top: 2.4rem;
+  border-bottom: 2px solid #ffcc33;
+}
+
+.learn-more-hero:hover, .learn-more-hero:active{
+  border-bottom: 2px solid #363230;
+}
